2020-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi (Invoking recins): Do not claim that recins
	creates non-existent files.
	* NEWS: Update.

2020-01-29  Dominic Walden  <dominic@dwalden.co.uk>

	* doc/recutils.texi (Using ob-rec.el): New chapter.

2020-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/csv2rec.c (field_cb): Detect and error when a row contains
	too many columns.

2020-01-28  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/recutl.c (recutl_print_version): Update copyright.
	* src/rec-crypt-dummy.c: Likewise.

2020-01-28  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version to 1.8.90.
	* NEWS: Updated for 1.8.90.

2020-01-28  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* bootstrap.conf (gnulib_modules): Import the modules copy-file
	and remove.
	* utils/recutl.c (recutl_write_db_to_file): Copy and remove
	instead of rename temporary files.

2020-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Import module update-copyright.
	* gnulib: Update submodule reference to latest master.

2019-06-23  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/csv2rec.c (recutl_print_help): Spelling fix: ommited ->
	omitted.
	* man/csv2rec.1: Regenerated.
	Reported by Sven Wick.

2019-02-04  Brandon Invergo  <brandon@invergo.net>

	* utils/rec2csv.c (DELIM_ARG): New long option.
	(rec2csv_parse_args): Use DELIM_ARG and put RECORD_TYPE_ARG in the
	right place.

2019-01-07  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi (Top): Spurious menu header "Remote
	Descriptors" removed.

2019-01-03  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* configure.ac: Bump version to 1.8.
	* NEWS: Likewise.

2018-05-31  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi (Bash Builtins): Note that some systems
	require the full path to the bash builtin shared object.

2018-03-19  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 1.7.91.
	* NEWS: Likewise.
