@@ -1,3 +1,12 @@
+2020-02-04  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* src/rec-rset.c (rec_rset_type_field_fex): Allow blanks before
+	the FEX in a %type field.
+	* torture/utils/recfix.sh (blanks-before-fex-in-type): New test
+	file.
+	(recfix-blanks-before-fex-in-type): New test.
+	* NEWS: Updated.
+
 2020-01-29  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/recutils.texi (Invoking recins): Do not claim that recins
